More updates to tests to use new form of options